[package]
name = "tss-esapi"
version = "4.0.8-alpha.1"
authors = ["Ionut Mihalcea <ionut.mihalcea@arm.com>",
           "Hugues de Valon <hugues.devalon@arm.com>"]
edition = "2018"
description = "Wrapper around TSS 2.0 Enhanced System API"
readme = "README.md"
keywords = ["tpm", "tss", "esys", "esapi"]
categories = ["api-bindings", "external-ffi-bindings", "cryptography"]
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/rust-tss-esapi"
documentation = "https://docs.rs/crate/tss-esapi"

[dependencies]
bitfield = "=0.13.2"
serde = { version = "1.0.130", features = ["derive"] }
mbox = { git = "https://github.com/nyantec/mbox.git", rev = "c0befcee870dc03722ad0b5070a1e9647ff7182c" }
log = "0.4.14"
enumflags2 = "=0.6.4"
num-derive = "=0.3.0"
num-traits = "0.2.14"
hostname-validator = "=1.0.0"
regex = "1.5.4"
zeroize = { version = "=1.1.0", features = ["zeroize_derive"] }
zeroize_derive = "=1.3.2"
once_cell = "1.18.0"
syn = "=1.0.77"
thread_local = "=1.1.0"

[dev-dependencies]
env_logger = "=0.7.1"

[build-dependencies]
bindgen = "0.70"
pkg-config = "=0.3.20"

[features]
docs = []

[package.metadata.docs.rs]
features = ["docs"]
